Working on TinyGP

--- a/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.csproj
+++ b/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
         <PackageReference Include="Italbytz.Adapters.Algorithms.AI" Version="9.9.1"/>
+        <PackageReference Include="Italbytz.ML" Version="9.11.1"/>
         <PackageReference Include="Italbytz.Ports.Algorithms.EA" Version="9.3.0"/>
     </ItemGroup>
 
