--- a/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.Tests/Italbytz.Adapters.Algorithms.EA.Tests.csproj
+++ b/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.Tests/Italbytz.Adapters.Algorithms.EA.Tests.csproj
@@ -11,7 +11,8 @@
         <PackageReference Include="Microsoft.ML" Version="4.0.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="MSTest" Version="3.6.4"/>
-        <PackageReference Include="Italbytz.ML.UCIMLR" Version="9.3.4" />
+        <PackageReference Include="Italbytz.ML.UCIMLR" Version="9.3.4"/>
+        <PackageReference Include="System.Text.Json" Version="9.0.10"/>
     </ItemGroup>
 
     <ItemGroup>
