--- a/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.csproj
+++ b/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA/Italbytz.Adapters.Algorithms.EA.csproj
@@ -24,8 +24,9 @@
 
     <ItemGroup>
         <PackageReference Include="Italbytz.Adapters.Algorithms.AI" Version="9.11.0"/>
-        <PackageReference Include="Italbytz.ML" Version="9.11.1"/>
-        <PackageReference Include="Italbytz.Ports.Algorithms.EA" Version="9.13.0"/>
+        <PackageReference Include="Italbytz.ML" Version="9.13.0"/>
+        <PackageReference Include="Italbytz.Ports.Algorithms.EA" Version="9.17.0"/>
+        <PackageReference Include="System.Text.Json" Version="9.0.10"/>
     </ItemGroup>
 
 </Project>
